# bird-interact-agents

./: .gitignore  PROGRESS.md  README.md  ROADMAP.md  W4C_ENRICHMENT_SUMMARY.md  pyproject.toml  run_strict_matrix.sh
.claude/skills/kb-to-slayer-models/: SKILL.md
.claude/skills/translate-kb-to-slayer/: SKILL.md
.claude/skills/translate-mini-interact-kb/: SKILL.md
_w4c_instructions/: _README.md  archeology.md  crypto.md  cybermarket.md  fake.md  households.md  labor_certification_applications.md  mental.md  museum.md  news.md  polar.md  reverse_logistics.md  vaccine.md  virtual.md
_w4d_instructions/: _README.md  alien.md  cold_chain_pharma_compliance.md  credit.md  crypto.md  cybermarket.md  disaster.md  exchange_traded_funds.md  fake.md  households.md  hulushows.md  insider.md  labor_certification_applications.md  mental.md  museum.md  news.md  organ_transplant.md  planets_data.md  robot.md  solar.md  sports_events.md  vaccine.md
scripts/: append_deferred_stubs.py  build_w4d_instructions.py  compare_results.py  export_slayer_models.py  ingest_slayer_models.py  kb_op_audit_classify.py  kb_op_audit_extract.py  kb_op_audit_summarize.py  multi_kb_audit.py  redirect_kb_duplicates.py  refresh_kb_annotations.py  regenerate_slayer_model.py  run_haiku_slayer.sh  run_three_way.sh  select_tasks.py  slayer_search_for_db.py  verify_kb_coverage.py
slayer_models/_notes/: alien.md  archeology.md  cold_chain_pharma_compliance.md  credit.md  cross_db.md  crypto.md  cybermarket.md  disaster.md  exchange_traded_funds.md  fake.md  gaming.md  households.md  hulushows.md  insider.md  labor_certification_applications.md  mental.md  museum.md  news.md  organ_transplant.md  planets_data.md  polar.md  reverse_logistics.md  robot.md  solar.md  sports_events.md  vaccine.md  virtual.md
slayer_models/alien/datasources/: alien.yaml
slayer_models/alien/models/: observationalconditions.yaml  observatories.yaml  researchprocess.yaml  signal_full.yaml  signaladvancedphenomena.yaml  signalclassification.yaml  signaldecoding.yaml  signaldynamics.yaml  signalprobabilities.yaml  signals.yaml  sourceproperties.yaml  telescopes.yaml
slayer_models/households/: memories.yaml
src/bird_interact_agents/: config.py  hard8_preprocessor.py  harness.py  model_string.py  original_ingest.py  results_db.py  run.py  strict.py  usage.py
tests/: conftest.py  test_agno_tools.py  test_agno_usage.py  test_budget_enforcement.py  test_claude_sdk_tools.py  test_claude_sdk_usage.py  test_compare_results.py  test_db_operations.py  test_hard8_preprocessor.py  test_harness_imports.py  test_kb_annotation_invariants.py  test_mcp_agent_tools.py  test_mcp_agent_usage.py  test_model_string.py  test_oracle.py  test_orig_ingest.py  test_parity.py  test_prompt_kb_descriptions.py  test_prompt_parity.py  test_pydantic_ai_tools.py  test_pydantic_ai_usage.py  test_results_db.py  test_run_aggregation.py  test_run_db_integration.py  test_slayer_mcp_config.py  test_slayer_models_loadable.py  test_slayer_tools.py  test_smolagents_tools.py  test_smolagents_usage.py  test_strict.py  test_submit_classification.py  test_submit_helpers.py  test_submit_records_diagnostics.py  test_three_way_scripts.py  test_timing.py  test_tool_call_stats.py  test_tool_specs.py  test_usage.py  test_usage_retry.py  test_w6_resolve_and_load.py
tests/scripts/: test_export_slayer_models.py  test_kb_op_audit_extract.py  test_verify_kb_coverage.py
tests/slayer_pipeline/: test_dates_llm.py  test_pipeline.py  test_portable_connection.py
(+807 files in other folders)
