[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bird-interact-agents"
version = "0.1.0"
description = "Pluggable agent benchmarks for BIRD-Interact (SLayer + raw SQL modes)"
requires-python = ">=3.11,<4.0"
license = "MIT"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "litellm>=1.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
claude-sdk = ["claude-agent-sdk>=0.1.68"]
pydantic-ai = [
    "pydantic-ai>=1.0",
    "httpx[socks]",
]
smolagents = ["smolagents>=1.0"]
agno = ["agno>=2.0"]
mcp-agent = ["mcp-agent>=0.0.16"]
slayer = ["motley-slayer[embedding-search]>=0.6.1"]
# `original` brings in the upstream BIRD-Interact mini_interact_agent harness
# so we can call its main.py directly via `uv run python -m batch_run_bird_interact.main`.
original = ["mini-interact-agent"]
all = [
    "claude-agent-sdk>=0.1.68",
    "pydantic-ai>=1.0",
    "smolagents>=1.0",
    "agno>=2.0",
    "mcp-agent>=0.0.16",
    "motley-slayer[embedding-search]>=0.6.1",
    "mini-interact-agent",
]
dev = ["pytest", "pytest-asyncio"]

# Local editable source for the upstream `mini-interact-agent` harness.
# Only resolved when installing the `original` or `all` extras (so the default
# `uv sync` is unaffected). Requires the BIRD-Interact repo cloned as a
# sibling of this checkout — i.e. `<parent>/bird-interact-agents` and
# `<parent>/BIRD-Interact` side by side. See README "Prerequisites" for the
# layout and the workaround when running from a `git worktree` (where the
# relative path resolves outside the worktree's parent).
[tool.uv.sources]
mini-interact-agent = { path = "../BIRD-Interact/mini_interact/knowledge_based/mini_interact_agent", editable = true }

[project.scripts]
bird-interact = "bird_interact_agents.run:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bird_interact_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
